[gd_scene load_steps=2 format=3 uid="uid://djw3exmao8kwh"]

[ext_resource type="Script" path="res://World.gd" id="1_cpcs3"]

[node name="World" type="Node2D"]
script = ExtResource("1_cpcs3")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_right = 406.0
offset_bottom = 50.0

[node name="Host" type="Button" parent="."]
offset_left = 65.0
offset_top = 84.0
offset_right = 287.0
offset_bottom = 143.0
text = "Host"

[node name="Join" type="Button" parent="."]
offset_left = 398.0
offset_top = 87.0
offset_right = 620.0
offset_bottom = 146.0
text = "Join"

[node name="Start_Game" type="Button" parent="."]
offset_left = 683.0
offset_top = 89.0
offset_right = 905.0
offset_bottom = 148.0
text = "StartGame
"

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Start_Game" to="." method="_on_start_game_pressed"]
